<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.ForgotPasswordActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


    <TextView
        android:id="@+id/txForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/forgot_password"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/google_sans_medium"
        android:textSize="16sp" />


            <TextView
                android:id="@+id/tx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Please enter your email/mobile to receive a \n link  to crate a new password."
                android:layout_marginStart="40dp"
                android:fontFamily="@font/google_sans_medium"
                android:textSize="13sp" />


    <soup.neumorphism.NeumorphCardView
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        app:neumorph_shapeType="pressed">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:gravity="center">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@null"
                android:paddingStart="5dp"
                android:fontFamily="@font/google_sans_medium"
                android:hint="@string/email_mobile"
                android:maxLength="50"
                android:singleLine="true"
                android:textSize="14sp" />


        </RelativeLayout>
    </soup.neumorphism.NeumorphCardView>



        </LinearLayout>

    </ScrollView>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">


        <com.google.android.material.button.MaterialButton
            android:layout_width="300dp"
            android:id="@+id/btSubmit"
            app:cornerRadius="20dp"
            android:text="@string/send"
            android:textAllCaps="false"
            android:elevation="5dp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:padding="@dimen/_5sdp"
            android:fontFamily="@font/google_sans_medium"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

        </com.google.android.material.button.MaterialButton>


    </RelativeLayout>


</RelativeLayout>