<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageView1"
                android:src="@drawable/logoci"
                android:scaleType="fitCenter"
                app:riv_corner_radius="30dip"
                android:elevation="5dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:layout_height="130dp"
                android:layout_width="130dp" />


            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                app:neumorph_shapeType="pressed">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:background="@null"
                        android:gravity="center"
                        android:fontFamily="@font/google_sans_medium"
                        android:hint="@string/enter_address"
                        android:maxLength="100"
                        android:singleLine="true"
                        android:textSize="14sp" />


                </RelativeLayout>
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:neumorph_shapeType="pressed">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/etPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:background="@null"
                        android:gravity="center"
                        android:inputType="textPassword"
                        android:fontFamily="@font/google_sans_medium"
                        android:hint="@string/password"
                        android:maxLength="50"
                        android:singleLine="true"
                        android:textSize="14sp" />


                </RelativeLayout>
            </soup.neumorphism.NeumorphCardView>


            <com.google.android.material.button.MaterialButton
                android:layout_width="200dp"
                android:id="@+id/btSubmit"
                app:cornerRadius="20dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:elevation="5dp"
                android:layout_marginBottom="5dp"
                android:padding="@dimen/_5sdp"
                android:fontFamily="@font/google_sans_medium"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_height="50dp">

            </com.google.android.material.button.MaterialButton>


            <TextView
                android:id="@+id/txForgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/forgot"
                android:fontFamily="@font/google_sans_medium"
                android:textSize="13sp" />

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/cardgoogle"
                style="@style/Widget.Neumorph.ImageButton"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_height="@dimen/_55sdp"
                android:scaleType="centerInside"
                app:neumorph_shapeType="flat" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/google_sans_medium"
                        android:textColor="@color/purple_200"
                        android:text="@string/login_with_google"
                        android:textStyle="bold"
                        android:textSize="13sp" />


                    <ImageView
                        android:layout_width="50dp"
                        android:src="@drawable/gmail"
                        android:padding="5dp"
                        android:layout_marginEnd="15dp"
                        android:layout_alignParentRight="true"
                        android:layout_height="50dp">



                    </ImageView>


                </RelativeLayout>


            </soup.neumorphism.NeumorphCardView>


            <soup.neumorphism.NeumorphCardView
                android:id="@+id/cardFb"
                style="@style/Widget.Neumorph.ImageButton"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_height="@dimen/_55sdp"
                android:scaleType="centerInside"
                app:neumorph_shapeType="flat" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txt1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/google_sans_medium"
                        android:textColor="@color/purple_200"
                        android:text="@string/login_with_facebook"
                        android:textStyle="bold"
                        android:textSize="13sp" />


                    <ImageView
                        android:layout_width="50dp"
                        android:src="@drawable/fb"
                        android:padding="5dp"
                        android:layout_marginEnd="15dp"
                        android:layout_alignParentRight="true"
                        android:layout_height="50dp">



                    </ImageView>


                </RelativeLayout>


            </soup.neumorphism.NeumorphCardView>


            <soup.neumorphism.NeumorphCardView
                android:id="@+id/cardAccount"
                style="@style/Widget.Neumorph.ImageButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:scaleType="centerInside"
                app:neumorph_shapeType="flat">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/txAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/google_sans_medium"
                        android:text="@string/create_new_account"
                        android:textColor="@color/purple_200"
                        android:textSize="13sp"
                        android:textStyle="bold" />


                </RelativeLayout>


            </soup.neumorphism.NeumorphCardView>


        </LinearLayout>

    </ScrollView>
</RelativeLayout>
