<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.SignUpActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <soup.neumorphism.NeumorphFloatingActionButton
                android:id="@+id/fab"
                style="@style/Widget.Neumorph.FloatingActionButton"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:alpha="0.6"
                app:neumorph_shapeType="pressed"
                android:src="@drawable/bird"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" >



            </soup.neumorphism.NeumorphFloatingActionButton>
            <ImageView
                android:id="@+id/basin_image_view"
                android:layout_width="35dp"
                android:layout_gravity="center"
                android:layout_height="35dp"

                android:layout_marginTop="-30dp"
                android:src="@drawable/plus"
                />

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:neumorph_shapeType="pressed">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/etFull"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:background="@null"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:fontFamily="@font/google_sans_medium"
                        android:hint="@string/full_name"
                        android:maxLength="100"
                        android:singleLine="true"
                        android:textSize="14sp" />


                </RelativeLayout>
            </soup.neumorphism.NeumorphCardView>


            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:neumorph_shapeType="pressed">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/etLast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:background="@null"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:fontFamily="@font/google_sans_medium"
                        android:hint="@string/last_name"
                        android:maxLength="100"
                        android:singleLine="true"
                        android:textSize="14sp" />


                </RelativeLayout>
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:neumorph_shapeType="pressed">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/etPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:background="@null"
                        android:inputType="phone"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:fontFamily="@font/google_sans_medium"
                        android:hint="@string/phone_no"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:textSize="14sp" />


                </RelativeLayout>
            </soup.neumorphism.NeumorphCardView>




            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                app:neumorph_shapeType="pressed">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:background="@null"
                        android:paddingStart="5dp"
                        android:inputType="textEmailAddress"
                        android:paddingEnd="5dp"
                        android:fontFamily="@font/google_sans_medium"
                        android:hint="@string/email"
                        android:maxLength="100"
                        android:singleLine="true"
                        android:textSize="14sp" />


                </RelativeLayout>
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:neumorph_shapeType="pressed">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/editPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:fontFamily="@font/google_sans_medium"
                        android:hint="@string/password"
                        android:maxLength="50"
                        android:singleLine="true"
                        android:textSize="14sp" />


                </RelativeLayout>
            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                style="@style/Widget.Neumorph.CardView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:neumorph_shapeType="pressed">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/etConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:fontFamily="@font/google_sans_medium"
                        android:hint="@string/confirm_password"
                        android:maxLength="50"
                        android:singleLine="true"
                        android:textSize="14sp" />


                </RelativeLayout>
            </soup.neumorphism.NeumorphCardView>


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:id="@+id/btCreate"
                app:cornerRadius="20dp"
                android:text="@string/create_new_account"
                android:textAllCaps="false"
                android:elevation="5dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/google_sans_medium"
                android:layout_marginTop="20dp"
                android:layout_height="50dp">

            </com.google.android.material.button.MaterialButton>







        </LinearLayout>

    </ScrollView>
</RelativeLayout>